--- a/experiment_tf/sconscript
+++ b/experiment_tf/sconscript
@@ -12,12 +12,12 @@ localenv = env.Clone()
 nest = SConsWrap(Nest(), localenv['output'], alias_environment=localenv)
 
 KFOLD = 3
-NUM_TF = 4
-NUM_INITS = 2
-EPOCHS = 1
-PROX_EPOCHS = 1
-FULL_TREE_PENS = [0.001]
-INPUT_PENS = [0.01]
+NUM_TF = 13
+NUM_INITS = 5
+EPOCHS = 31
+PROX_EPOCHS = 11
+FULL_TREE_PENS = [0.001,0.0001]
+INPUT_PENS = [0.01,0.001,0.0001]
 
 nest.add(
     'seed',
@@ -49,92 +49,94 @@ def make_fold_splits(env, outdir, c):
         [],
         ' '.join(map(str, cmd)))
 
-#@nest.add_target_with_env(localenv)
-#def fit_dnn(env, outdir, c):
-#    targets = [
-#        join(outdir, 'dnn_model.h5')]
-#    cmd = [
-#        'python train_with_labels_wholedatax.py',
-#        '--num-tf',
-#        NUM_TF,
-#        '--exclude-tf',
-#        c['tf_idx'],
-#        '--data-path NEPDF_data',
-#        '--num-classes 2',
-#        '--n-hidden 100',
-#        '--n-layers 5',
-#        '--dropout-rate 0.15',
-#        '--epochs',
-#        EPOCHS,
-#        '--fit-dnn',
-#        '--do-binary',
-#	'--out-model-file ${TARGETS[0]}']
-#    return env.Command(
-#        targets,
-#        [],
-#        ' '.join(map(str, cmd)))
-#
-#@nest.add_target_with_env(localenv)
-#def evaluate_dnn(env, outdir, c):
-#    targets = [
-#        join(outdir, 'eval_dnn.json')]
-#    cmd = [
-#        'python predict_no_y.py',
-#        '--tf-idx',
-#        c['tf_idx'],
-#        '--data-path NEPDF_data',
-#        '--num-classes 2',
-#        '--fit-dnn',
-#        '--n-hidden 100',
-#        '--n-layers 5',
-#        '--dropout-rate 0.15',
-#        '--do-binary',
-#	'--model-path ${SOURCES[0]}',
-#	'--out-file ${TARGETS[0]}']
-#    return env.Command(
-#        targets,
-#        c['fit_dnn'],
-#        ' '.join(map(str, cmd)))
-#
-#@nest.add_target_with_env(localenv)
-#def fit_cnnc(env, outdir, c):
-#    targets = [
-#        join(outdir, 'cnnc_model.h5')]
-#    cmd = [
-#        'python train_with_labels_wholedatax.py',
-#        '--num-tf',
-#        NUM_TF,
-#        '--exclude-tf',
-#        c['tf_idx'],
-#        '--data-path NEPDF_data',
-#        '--num-classes 2',
-#        '--epochs',
-#        EPOCHS,
-#        '--do-binary',
-#	'--out-model-file ${TARGETS[0]}']
-#    return env.Command(
-#        targets,
-#        [],
-#        ' '.join(map(str, cmd)))
-#
-#@nest.add_target_with_env(localenv)
-#def evaluate_cnnc(env, outdir, c):
-#    targets = [
-#        join(outdir, 'eval_cnnc.json')]
-#    cmd = [
-#        'python predict_no_y.py',
-#        '--tf-idx',
-#        c['tf_idx'],
-#        '--data-path NEPDF_data',
-#        '--num-classes 2',
-#        '--do-binary',
-#	'--model-path ${SOURCES[0]}',
-#	'--out-file ${TARGETS[0]}']
-#    return env.Command(
-#        targets,
-#        c['fit_cnnc'],
-#        ' '.join(map(str, cmd)))
-#
+@nest.add_target_with_env(localenv)
+def fit_dnn(env, outdir, c):
+    targets = [
+        join(outdir, 'dnn_model.h5')]
+    cmd = [
+        'srun --cpus-per-task 4 --exclude=gizmoe1,gizmoe2',
+        'python train_with_labels_wholedatax.py',
+        '--num-tf',
+        NUM_TF,
+        '--exclude-tf',
+        c['tf_idx'],
+        '--data-path NEPDF_data',
+        '--num-classes 2',
+        '--n-hidden 100',
+        '--n-layers 5',
+        '--dropout-rate 0.15',
+        '--epochs',
+        EPOCHS,
+        '--fit-dnn',
+        '--do-binary',
+	'--out-model-file ${TARGETS[0]}']
+    return env.Command(
+        targets,
+        [],
+        ' '.join(map(str, cmd)))
+
+@nest.add_target_with_env(localenv)
+def evaluate_dnn(env, outdir, c):
+    targets = [
+        join(outdir, 'eval_dnn.json')]
+    cmd = [
+        'python predict_no_y.py',
+        '--tf-idx',
+        c['tf_idx'],
+        '--data-path NEPDF_data',
+        '--num-classes 2',
+        '--fit-dnn',
+        '--n-hidden 100',
+        '--n-layers 5',
+        '--dropout-rate 0.15',
+        '--do-binary',
+	'--model-path ${SOURCES[0]}',
+	'--out-file ${TARGETS[0]}']
+    return env.Command(
+        targets,
+        c['fit_dnn'],
+        ' '.join(map(str, cmd)))
+
+@nest.add_target_with_env(localenv)
+def fit_cnnc(env, outdir, c):
+    targets = [
+        join(outdir, 'cnnc_model.h5')]
+    cmd = [
+        'srun --cpus-per-task 4 --exclude=gizmoe1,gizmoe2',
+        'python train_with_labels_wholedatax.py',
+        '--num-tf',
+        NUM_TF,
+        '--exclude-tf',
+        c['tf_idx'],
+        '--data-path NEPDF_data',
+        '--num-classes 2',
+        '--epochs',
+        EPOCHS,
+        '--do-binary',
+	'--out-model-file ${TARGETS[0]}']
+    return env.Command(
+        targets,
+        [],
+        ' '.join(map(str, cmd)))
+
+@nest.add_target_with_env(localenv)
+def evaluate_cnnc(env, outdir, c):
+    targets = [
+        join(outdir, 'eval_cnnc.json')]
+    cmd = [
+        'python predict_no_y.py',
+        '--tf-idx',
+        c['tf_idx'],
+        '--data-path NEPDF_data',
+        '--num-classes 2',
+        '--do-binary',
+	'--model-path ${SOURCES[0]}',
+	'--out-file ${TARGETS[0]}']
+    return env.Command(
+        targets,
+        c['fit_cnnc'],
+        ' '.join(map(str, cmd)))
+
 
 nest.add_aggregate('easier_net_res', list)
 nest.add(
@@ -152,8 +154,8 @@ def fit_easier_net(env, outdir, c):
     targets = [
         join(outdir, 'train_easier_log.txt'),
         join(outdir, 'easier_model.pth')]
-    c['easier_net_res'].append(targets[1])
     cmd = [
+        'srun --cpus-per-task 4 --exclude=gizmoe1,gizmoe2',
         'python train_with_labels_wholedatax_easiernet.py',
         '--num-tf',
         NUM_TF,
@@ -186,6 +188,7 @@ def fit_easier_net(env, outdir, c):
 def evaluate_easiernet(env, outdir, c):
     targets = [
         join(outdir, 'eval_easiernet_folds.json')]
+    c['easier_net_res'].append(targets[0])
     cmd = [
         'python evaluate_easiernet_folds.py',
         '--num-tf',
@@ -226,57 +229,51 @@ def select_easier_net(env, outdir, c):
         '--log-file ${TARGETS[1]}']
     return env.Command(
         targets,
-        c['make_fold_splits'] + c['siernet_res'],
+        c['easier_net_res'],
         ' '.join(map(str, cmd)))
 
-#@nest.add_target_with_env(localenv)
-#def fit_final_easier_net(env, outdir, c):
-#    targets = [
-#        join(outdir, 'train_easier_log.txt'),
-#        join(outdir, 'easier_model.pth')]
-#    cmd = [
-#        'python train_with_labels_wholedatax_easiernet.py',
-#        '--num-tf',
-#        NUM_TF,
-#        '--exclude-tf',
-#        c['tf_idx'],
-#        '--data-path NEPDF_data',
-#        '--num-init',
-#        NUM_INITS * 2,
-#        '--num-classes 2',
-#        '--full-tree-pen',
-#        c['full_tree_pen'],
-#        '--input-pen',
-#        c['input_pen']
-#        '--n-hidden 100',
-#        '--n-layers 5',
-#        '--max-iters',
-#        EPOCHS,
-#        '--max-prox-iters',
-#        PROX_EPOCHS,
-#        '--do-binary',
-#        '--model-fit-params',
-#        '${SOURCES[0]}',
-#	'--out-model-file ${TARGETS[1]}',
-#	'--log-file ${TARGETS[0]}']
-#    return env.Command(
-#        targets,
-#        c['select_easier_net'],
-#        ' '.join(map(str, cmd)))
-#
-#@nest.add_target_with_env(localenv)
-#def evaluate_easiernet(env, outdir, c):
-#    targets = [
-#        join(outdir, 'eval_easiernet.json')]
-#    cmd = [
-#        'python predict_easiernet.py',
-#        '--tf-idx',
-#        c['tf_idx'],
-#        '--data-path NEPDF_data',
-#        '--do-binary',
-#	'--model-path ${SOURCES[1]}',
-#	'--out-file ${TARGETS[0]}']
-#    return env.Command(
-#        targets,
-#        c['fit_easier_net'],
-#        ' '.join(map(str, cmd)))
+@nest.add_target_with_env(localenv)
+def fit_final_easier_net(env, outdir, c):
+    targets = [
+        join(outdir, 'train_easier_log.txt'),
+        join(outdir, 'easier_model.pth')]
+    cmd = [
+        'python train_with_labels_wholedatax_easiernet.py',
+        '--num-tf',
+        NUM_TF,
+        '--exclude-tf',
+        c['tf_idx'],
+        '--data-path NEPDF_data',
+        '--num-init',
+        NUM_INITS * 2,
+        '--num-classes 2',
+        '--max-iters',
+        EPOCHS,
+        '--max-prox-iters',
+        PROX_EPOCHS,
+        '--do-binary',
+        '--model-fit-params',
+        '${SOURCES[0]}',
+	'--out-model-file ${TARGETS[1]}',
+	'--log-file ${TARGETS[0]}']
+    return env.Command(
+        targets,
+        c['select_easier_net'],
+        ' '.join(map(str, cmd)))
+
+@nest.add_target_with_env(localenv)
+def evaluate_easiernet(env, outdir, c):
+    targets = [
+        join(outdir, 'eval_easiernet.json')]
+    cmd = [
+        'python predict_easiernet.py',
+        '--tf-idx',
+        c['tf_idx'],
+        '--data-path NEPDF_data',
+        '--do-binary',
+	'--model-path ${SOURCES[1]}',
+	'--out-file ${TARGETS[0]}']
+    return env.Command(
+        targets,
+        c['fit_final_easier_net'],
+        ' '.join(map(str, cmd)))
